[gd_scene load_steps=7 format=3 uid="uid://cjdqtcuyp0tsi"]

[ext_resource type="Script" path="res://Scripts/MapItems/keycardReader.gd" id="1_o3adq"]
[ext_resource type="Material" uid="uid://jxt6it8qy3fl" path="res://Resources/Materials/m_enviro.tres" id="2_4mt0n"]
[ext_resource type="PackedScene" uid="uid://dij5bs6p5p8ny" path="res://Scenes/Objects/indicator_light.tscn" id="3_tlkj2"]

[sub_resource type="ArrayMesh" id="ArrayMesh_bspu4"]
_surfaces = [{
"aabb": AABB(0, -4.996e-17, 0, 0.9, 0.9, 0.45001),
"format": 34896613377,
"index_count": 30,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 0, 0, 1, 0, 3, 0, 0, 0, 3, 0, 4, 0, 0, 0, 4, 0, 5, 0, 3, 0, 1, 0, 6, 0, 3, 0, 6, 0, 4, 0, 5, 0, 7, 0, 2, 0, 5, 0, 2, 0, 0, 0, 1, 0, 2, 0, 7, 0, 1, 0, 7, 0, 6, 0),
"name": "Duck_Tex_0",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray(0, 0, 0, 0, 253, 255, 0, 0, 255, 255, 255, 255, 253, 255, 0, 0, 0, 0, 255, 255, 253, 255, 0, 0, 255, 255, 0, 0, 253, 255, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_43x6a"]
resource_name = "default_mesh"
_surfaces = [{
"aabb": AABB(0, -4.996e-17, 0, 0.9, 0.9, 0.45001),
"attribute_data": PackedByteArray(255, 223, 255, 191, 255, 255, 255, 159, 255, 223, 255, 159, 255, 255, 255, 191, 255, 255, 255, 127, 255, 223, 255, 95, 255, 255, 255, 95, 255, 223, 255, 127, 255, 255, 255, 127, 255, 223, 255, 95, 255, 255, 255, 95, 255, 223, 255, 127, 255, 255, 255, 127, 255, 223, 255, 95, 255, 255, 255, 95, 255, 223, 255, 127, 255, 255, 255, 127, 255, 223, 255, 95, 255, 255, 255, 95, 255, 223, 255, 127),
"format": 34896613399,
"index_count": 30,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 0, 0, 1, 0, 3, 0, 4, 0, 6, 0, 5, 0, 4, 0, 5, 0, 7, 0, 8, 0, 10, 0, 9, 0, 8, 0, 9, 0, 11, 0, 12, 0, 14, 0, 13, 0, 12, 0, 13, 0, 15, 0, 16, 0, 18, 0, 17, 0, 16, 0, 17, 0, 19, 0),
"material": ExtResource("2_4mt0n"),
"name": "Duck_Tex_0",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 20,
"vertex_data": PackedByteArray(0, 0, 0, 0, 253, 255, 255, 127, 255, 255, 255, 255, 253, 255, 255, 127, 0, 0, 255, 255, 253, 255, 255, 127, 255, 255, 0, 0, 253, 255, 255, 127, 0, 0, 0, 0, 253, 255, 170, 42, 255, 255, 0, 0, 0, 0, 170, 42, 255, 255, 0, 0, 253, 255, 170, 42, 0, 0, 0, 0, 0, 0, 170, 42, 255, 255, 0, 0, 253, 255, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 253, 255, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 253, 255, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 253, 255, 0, 0, 255, 255, 255, 255, 253, 255, 170, 42, 0, 0, 255, 255, 0, 0, 170, 42, 0, 0, 255, 255, 253, 255, 170, 42, 255, 255, 255, 255, 0, 0, 170, 42, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 170, 42, 84, 213, 170, 42, 84, 213, 170, 42, 84, 213, 170, 42, 84, 213, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 170, 170, 170, 170, 170, 170, 170, 170, 170, 170, 170, 170, 170, 170, 170, 170)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_bspu4")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_prwb6"]
points = PackedVector3Array(0.9, 0.9, 0.45, 0.9, 0.9, 0, 0, 0.9, 0.45, 0.9, -4.996e-17, 0.45, 0.9, -4.996e-17, 0, 0, 0.9, 0, 0, -4.996e-17, 0.45, 0, -4.996e-17, 0)

[node name="keycardReader" type="StaticBody3D" groups=["reader"]]
script = ExtResource("1_o3adq")

[node name="keycardReader" type="MeshInstance3D" parent="."]
mesh = SubResource("ArrayMesh_43x6a")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_prwb6")

[node name="cardLight" parent="." instance=ExtResource("3_tlkj2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.477797, 0.66215, 0.439343)

[node name="unlockLight" parent="." instance=ExtResource("3_tlkj2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.715297, 0.66215, 0.439343)

[node name="Timer" type="Timer" parent="unlockLight"]
wait_time = 0.5
one_shot = true

[connection signal="press" from="." to="." method="_on_press"]
[connection signal="timeout" from="unlockLight/Timer" to="." method="_on_timer_timeout"]
